Add QFN64 breakout pinout template to 0192. Update 0191 caravel pinout diagram

--- a/0192-2024-02-02.md
+++ b/0192-2024-02-02.md
@@ -89,6 +89,7 @@ Ask Matt first.
 
 ## Other stuff
 
+*   I made a [template](./files/0192/qfn64-breakout-pinout-template.ai) for use with my QFN64 breakout, to help with planning bodges and wiring using its pinout and test pads.
 *   Finish tt03p5-solo-squash testing notes/schematics.
 *   Merge PRs: Pawel, Pat. Also check Uri's 'commander' notes.
 *   Learn Tigard -- will it tolerate 5V OK for GFMPW0?
