--- a/0192-2024-02-02.md
+++ b/0192-2024-02-02.md
@@ -21,6 +21,10 @@
 *   Update pinout diagrams and plan to submit to caravel doco (but make sure they actually accept updates). Check findings with Discord first?
 *   Learn Tigard -- will it tolerate 5V OK for GFMPW0?
 
+I've made a quick plan for placement of power/GND wiring and decaps on my GFMPW0 breakout board:
+
+![Bodge soldering plan for GFMPW0 power/GND on QFN64 breakout](./i/0192-gfmpw0-breakout-bodges.png)
+
 Overall plan for starting GFMPW0 bringup:
 
 *   Test for any relationship between EP and other pins, esp. VSS pins: 1, 10, 20, 23, 29, 38, 39, 52, 56 (and check they short with each other)
