Update 0192: Add KiCad PCB file for GFMPW0/1 bodge wiring

--- a/0192-2024-02-02.md
+++ b/0192-2024-02-02.md
@@ -21,11 +21,18 @@
 *   Update pinout diagrams and plan to submit to caravel doco (but make sure they actually accept updates). Check findings with Discord first?
 *   Learn Tigard -- will it tolerate 5V OK for GFMPW0?
 
+
+## Overall plan for starting GFMPW0 bringup
+
 I've made a quick plan for placement of power/GND wiring and decaps on my GFMPW0 breakout board:
 
 ![Bodge soldering plan for GFMPW0 power/GND on QFN64 breakout](./i/0192-gfmpw0-breakout-bodges.png)
 
-Overall plan for starting GFMPW0 bringup:
+The KiCad PCB design file for this is [`qfntest2-gfmpw1-wiring.kicad_pcb`](./files/0192/qfntest2-gfmpw1-wiring.kicad_pcb) and it is derived from [my original KiCad QFN breakout project](https://github.com/algofoogle/sandpit/tree/master/pcb/kicad/qfn/qfntest2).
+
+I won't necessarily do any of this bodge soldering straight away.
+
+Instead, here are the steps I intend to follow:
 
 *   Test for any relationship between EP and other pins, esp. VSS pins: 1, 10, 20, 23, 29, 38, 39, 52, 56 (and check they short with each other)
 *   Check all power pins are shorted: 9, 17, 18, 30, 40, 47, 49, 63, 64
