0194: Getting TT03p5 ready for demo

--- a/0192-2024-02-02.md
+++ b/0192-2024-02-02.md
@@ -89,6 +89,7 @@ Ask Matt first.
 
 ## Future revs for my QFN breakouts
 
+*   Pads on reverse side, optionally for a decap on each pin. See [this](https://www.aliexpress.com/item/4000122321131.html) for example.
 *   More solderable pads (areas with no solder mask)
 *   Maybe a few different planes (i.e. filled rects) that can be used for pos/neg
 *   Extra header pins that are joined (or joinable) in groups for any purpose
