Update 0192: Add progress on VGA clock PCB revs

--- a/0192-2024-02-02.md
+++ b/0192-2024-02-02.md
@@ -68,8 +68,6 @@ Instead, here are the steps I intend to follow:
 
 ## Possible VGA clock PCB revs
 
-Ask Matt first.
-
 *   Approach: show smaller steps in stages towards tidying up and then changing the board. Easier to follow, verify and sign off.
 *   Create space and tidy up:
     *   Align/compress 3 pushbuttons on the right.
@@ -86,9 +84,16 @@ Ask Matt first.
     *   Shove in test points on PCB
     *   Move back silkscreens around to avoid overlap, and to make it prettier
 
+Here's a prototype (unfinished because it lacks the bidir pads). Changes are seen to the right of the ASIC:
+
+![](./i/0192-vga-clock-rev.png)
+
+KiCad files for the above: [here](./files/0192/tt-vga-clock-pcb-REV.zip)
+
 
 ## Future revs for my QFN breakouts
 
+*   Adjustable resistor jumper array.
 *   Pads on reverse side, optionally for a decap on each pin. See [this](https://www.aliexpress.com/item/4000122321131.html) for example.
 *   More solderable pads (areas with no solder mask)
 *   Maybe a few different planes (i.e. filled rects) that can be used for pos/neg
