0195: Coming back to life (mostly about a new MPW9 VM)

--- a/0170-2023-10-31.md
+++ b/0170-2023-10-31.md
@@ -223,7 +223,7 @@
 *   Comments on Ubuntu 22 slow as a VM re 3D acceleration *prior* to installing: https://askubuntu.com/questions/1426963/ubuntu-22-04-22-10-on-virtual-machine-is-extremely-slow-same-behaviour-on-vmw
 *   Logs
 *   Drag'n'Drop
-*   Load average; Hanging aruond 1.3~2 without doing anything??
+*   Load average; Hanging around 1.3~2 without doing anything??
 *   Reinstall Guest Additions
 *   System Monitor (Activity)
 *   Does VSCode itself just run slowly, or slow everything down? How much CPU load does it cause for 'normal' stuff? Does disabling extensions help?
