Minor 0192 update re QFN breakout PCB

--- a/0192-2024-02-02.md
+++ b/0192-2024-02-02.md
@@ -94,6 +94,7 @@ KiCad files for the above: [here](./files/0192/tt-vga-clock-pcb-REV.zip)
 ## Future revs for my QFN breakouts
 
 *   Adjustable resistor jumper array.
+*   0.5mm holes in breakout pads (for 26~30AWG bodge wire feed-thru): Requires 1.0mm minimum width for pad.
 *   Pads on reverse side, optionally for a decap on each pin. See [this](https://www.aliexpress.com/item/4000122321131.html) for example.
 *   More solderable pads (areas with no solder mask)
 *   Maybe a few different planes (i.e. filled rects) that can be used for pos/neg
