Update 0197 with more testing results and possible 'pin swap' bug reference

--- a/0197-2024-04-02.md
+++ b/0197-2024-04-02.md
@@ -22,6 +22,30 @@ I think this generally suggests that the reciprocal is not (always) working corr
 
 The first step to trying to work out what's going on is to make sure we can regenerate the original GDS and other build/synthesis artefacts from the time I did this submission...
 
+## Other images of glitches
+
+| Reference | Sylvain's capture |
+|-|-|
+| ![Reference view 1](i/0197-ref1.png) | ![Sylvain's capture 1](i/0197-tnt1.png) |
+| ![Reference view 2](i/0197-ref2.png) | ![Sylvain's capture 2](i/0197-tnt2.png) |
+| ![Reference view 3](i/0197-ref3.png) | ![Sylvain's capture 3](i/0197-tnt3.png) |
+| ![Reference view 4](i/0197-ref4.png) | ![Sylvain's capture 4](i/0197-tnt4.png) |
+
+The `pov_payload` values of the images above are:
+1.  `00110100011011100011111011011000000111101110000001000001111111000000011110`
+2.  `00101110000100100001110001101111010011111110100011100001011100111101001111`
+3.  `00111010000111000101101111111100100011011110010101100001101010100010001101`
+4.  `00011011010010000100101111111000111111111000000000000000000000000100000000`
+
+Another random view from Sylvain:
+
+![Sylvain random](i/0197-tnt-random.png)
+
+## Code sent to Sylvain with POV payloads
+
+I created the [`spi_load_view.py` snippet](https://github.com/algofoogle/raybox-zero/blob/tt04-bringup-notes/notes/spi_load_view.py) which I sent to Sylvain, that bit-bangs the SPI `pov_payload` values as shown above into Sylvain's test board, and it seems to work OK.
+
+
 ## tt04-raybox-zero 1.0
 
 *   [Tag link](https://github.com/algofoogle/tt04-raybox-zero/releases/tag/1.0)
@@ -129,13 +153,29 @@ Steps:
 
 ## Next steps
 
-*   Create cocotb stub for RTL
-*   See if GL sim is possible
-*   Patch in GL sim from more recent (EW?) raybox-zero, if necessary
-*   Document recent TT04 raybox-zero ASIC findings so far
-*   Fix L7 VM VT-x.
+* [x] Create cocotb stub for RTL: **DONE** - See: https://github.com/algofoogle/tt04-raybox-zero/tree/1.0-test/src/test
+* [x] See if GL sim is possible
+* [x] Patch in GL sim from more recent (EW?) raybox-zero, if necessary
+* [ ] Document recent TT04 raybox-zero ASIC findings so far
+* [ ] Option for Verilator sim to write out a data stream, e.g. to compare with ASIC sigrok capture.
+* [ ] Fix L7 VM VT-x.
 
 ## Theories about incorrect rendering
 
 *   Could it be due to some bits not being reset correctly, esp. those out of the SPI range?
 *   Fanout
+*   Sylvain/Uri [have suggested](https://discord.com/channels/1009193568256135208/1222582697596162220/1224700836907847720) it could be a ['pin swapping' bug (logical change during resizing) found in OpenLane](https://github.com/The-OpenROAD-Project/OpenROAD/issues/4647).
+
+## Lessons learned
+
+*   Have more debug output options, e.g. there could be a mode to stream out the actual trace internals instead of image data. We have 6 channels (RGB222) to use easily:
+    1.  Trace vector X
+    2.  Trace vector Y
+    3.  Distance
+    4.  Height (distance reciprocal)
+    5.  Texture scaler
+    6.  ?
+
+## Other notes
+
+*   SR (sigrok) file: From conversation [here](https://discord.com/channels/1009193568256135208/1222582697596162220/1224367253001207839): [`tt04-33.sr`](./files/0197/tt04-33.sr) -- Capture of ASIC's outputs.
